fixed bad spacing in navbar

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -18,8 +18,7 @@ ul#nav li {
   display:inline;
 
   border-right:1px solid #FFF;
-  padding-right:8px;
-  padding-left:4px;
+  padding:0px 8px;
 }
 
 ul#nav li:first-child,
